--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@
 #/web/.eslintignore
 #/web/.eslintrc.json
 #/web/.gitattributes
-#/web/.htaccess
+/web/.htaccess
 #/autoload.php
 #/composer.lock
 #/web/index.php
