--- a/web/modules/contrib/xmlsitemap/xmlsitemap_custom/xmlsitemap_custom.info.yml
+++ b/web/modules/contrib/xmlsitemap/xmlsitemap_custom/xmlsitemap_custom.info.yml
@@ -2,13 +2,12 @@ name: XML Sitemap Custom
 type: module
 description: 'Adds user configurable links to the sitemap.'
 package: 'XML Sitemap'
-# core: 8.x
+core: 8.x
 configure: xmlsitemap_custom.list
 dependencies:
     - xmlsitemap:xmlsitemap
 
-# Information added by Drupal.org packaging script on 2018-10-03
-version: '8.x-1.0-alpha3'
-core: '8.x'
+# Information added by Drupal.org packaging script on 2019-12-03
+version: '8.x-1.0-alpha4'
 project: 'xmlsitemap'
-datestamp: 1538607186
+datestamp: 1575402785
