--- a/web/themes/s2s/s2s.libraries.yml
+++ b/web/themes/s2s/s2s.libraries.yml
@@ -1,7 +1,6 @@
 global-styling:
   css:
     theme:
-      css/s2s_general.css: {}
       css/style.css: {}
       //translate.google.com/translate_a/element.js?cb=googleTranslateElementInit: { type: external }
 global-js:
@@ -10,6 +9,7 @@ global-js:
         js/siteimprove.js: {}        
     dependencies:
         - core/jquery
+        - core/drupal
 fonts:
   css:
     theme:
