--- a/web/modules/contrib/views_slideshow/composer.json
+++ b/web/modules/contrib/views_slideshow/composer.json
@@ -13,7 +13,9 @@
   "support": {
     "issues": "https://www.drupal.org/project/issues/views_slideshow",
     "irc": "irc://irc.freenode.org/drupal-contribute",
-    "source": "https://cgit.drupalcode.org/views_slideshow"
+    "source": "https://git.drupalcode.org/project/views_slideshow"
   },
-  "require": {}
+  "require": {
+    "drupal/core": "^8 || ^9"
+  }
 }
