--- a/web/modules/contrib/views_slideshow/tests/modules/views_slideshow_test/views_slideshow_test.info.yml
+++ b/web/modules/contrib/views_slideshow/tests/modules/views_slideshow_test/views_slideshow_test.info.yml
@@ -2,15 +2,13 @@ name: 'Views Slideshow Test Config'
 type: module
 description: 'Provides default views for tests.'
 package: Testing
-# version: VERSION
-# core: 8.x
+core: 8.x
 dependencies:
   - drupal:views
   - views_slideshow:views_slideshow
   - views_slideshow:views_slideshow_cycle
 
-# Information added by Drupal.org packaging script on 2017-11-18
-version: '8.x-4.6'
-core: '8.x'
+# Information added by Drupal.org packaging script on 2020-04-13
+version: '8.x-4.7'
 project: 'views_slideshow'
-datestamp: 1510987088
+datestamp: 1586783862
