--- a/web/modules/contrib/pathauto/tests/modules/pathauto_custom_punctuation_test/pathauto_custom_punctuation_test.info.yml
+++ b/web/modules/contrib/pathauto/tests/modules/pathauto_custom_punctuation_test/pathauto_custom_punctuation_test.info.yml
@@ -1,10 +1,8 @@
-name: 'Views Test Config'
+name: 'Pathauto custom punctuation testing module'
 type: module
-description: 'Provides default views for tests.'
+core: '8.x'
+description: 'Add some uncommon punctuation to the replacement list.'
 package: Testing
-core_version_requirement: ^8.8 || ^9
-dependencies:
-  - drupal:views
 
 # Information added by Drupal.org packaging script on 2020-04-26
 version: '8.x-1.7'
