--- a/web/modules/contrib/entityqueue/entityqueue.info.yml
+++ b/web/modules/contrib/entityqueue/entityqueue.info.yml
@@ -5,7 +5,7 @@ package: Entityqueue
 core_version_requirement: ^8.7.7 || ^9
 configure: entity.entity_queue.collection
 
-# Information added by Drupal.org packaging script on 2020-04-01
-version: '8.x-1.0-rc1'
+# Information added by Drupal.org packaging script on 2020-04-15
+version: '8.x-1.0'
 project: 'entityqueue'
-datestamp: 1585745719
+datestamp: 1586937739
