--- a/web/modules/contrib/entityqueue/modules/entityqueue_smartqueue/entityqueue_smartqueue.info.yml
+++ b/web/modules/contrib/entityqueue/modules/entityqueue_smartqueue/entityqueue_smartqueue.info.yml
@@ -7,7 +7,7 @@ core_version_requirement: ^8.7.7 || ^9
 dependencies:
   - entityqueue:entityqueue
 
-# Information added by Drupal.org packaging script on 2020-04-01
-version: '8.x-1.0-rc1'
+# Information added by Drupal.org packaging script on 2020-04-15
+version: '8.x-1.0'
 project: 'entityqueue'
-datestamp: 1585745719
+datestamp: 1586937739
