--- a/composer.json
+++ b/composer.json
@@ -76,6 +76,7 @@
         "drupal/typed_data": "^1.0",
         "drupal/views_data_export": "1.x-dev",
         "drupal/views_infinite_scroll": "^1.5",
+        "drupal/views_slideshow": "^4.7",
         "drupal/votingapi": "^3.0",
         "drupal/webform": "^5.2",
         "drupal/webform_score": "^1.0",
