--- a/web/modules/contrib/linkit/linkit.info.yml
+++ b/web/modules/contrib/linkit/linkit.info.yml
@@ -2,7 +2,7 @@ name: Linkit
 type: module
 description: 'Provides an easy interface for internal and external linking with wysiwyg editors.'
 package: User interface
-core_version_requirement: ^8.8 || ^9
+core: 8.x
 configure: entity.linkit_profile.collection
 test_dependencies:
   - imce:imce
