--- a/web/modules/contrib/linkit/tests/linkit_test/linkit_test.info.yml
+++ b/web/modules/contrib/linkit/tests/linkit_test/linkit_test.info.yml
@@ -2,7 +2,8 @@ name: 'Linkit test module'
 description: 'Support module for Linkit testing.'
 package: Testing
 type: module
-core_version_requirement: ^8.8 || ^9
+# version: VERSION
+core: 8.x
 dependencies:
   - linkit:linkit
   - drupal:field
