--- a/composer.json
+++ b/composer.json
@@ -76,7 +76,7 @@
         "drupal/term_csv_tree_import": "^1.0",
         "drupal/token": "^1.3",
         "drupal/typed_data": "^1.0",
-        "drupal/views_data_export": "1.x-dev",
+        "drupal/views_data_export": "^1.0@RC",
         "drupal/views_infinite_scroll": "^1.5",
         "drupal/views_slideshow": "^4.7",
         "drupal/votingapi": "^3.0",
