--- a/composer.json
+++ b/composer.json
@@ -72,8 +72,10 @@
         "drupal/seckit": "^1.0@alpha",
         "drupal/shs": "^1.0",
         "drupal/simple_sitemap": "^3.4",
+        "drupal/structure_sync": "^1.16",
         "drupal/swiftmailer": "^1.0",
         "drupal/taxonomy_import": "^1.0",
+        "drupal/term_csv_export_import": "^3.0@alpha",
         "drupal/term_csv_tree_import": "^1.0",
         "drupal/token": "^1.3",
         "drupal/typed_data": "^1.0",
