--- a/web/modules/contrib/linkit/tests/linkit_test/linkit_test.info.yml
+++ b/web/modules/contrib/linkit/tests/linkit_test/linkit_test.info.yml
@@ -2,8 +2,7 @@ name: 'Linkit test module'
 description: 'Support module for Linkit testing.'
 package: Testing
 type: module
-# version: VERSION
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 dependencies:
   - linkit:linkit
   - drupal:field
