--- a/web/modules/contrib/empty_page/empty_page.info.yml
+++ b/web/modules/contrib/empty_page/empty_page.info.yml
@@ -3,10 +3,11 @@ description: A simple empty page solution. Assists in creating empty menu callba
 package: Other
 
 type: module
-# core: 8.x
+core: 8.x
+core_version_requirement: ^8 || ^9
+configure: empty_page.administration
 
-# Information added by Drupal.org packaging script on 2018-03-05
-version: '8.x-2.0'
-core: '8.x'
+# Information added by Drupal.org packaging script on 2020-06-23
+version: '8.x-3.0'
 project: 'empty_page'
-datestamp: 1520245699
+datestamp: 1592930946
