composer files update

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "dompdf/dompdf": "^0.8.1",
         "drupal-composer/drupal-scaffold": "^2.5",
         "drupal/address": "^1.7",
-        "drupal/admin_toolbar": "^1.27",
+        "drupal/admin_toolbar": "^2.3",
         "drupal/advagg": "^4.0",
         "drupal/asset_injector": "~2.0",
         "drupal/better_exposed_filters": "^3.0",
@@ -40,7 +40,7 @@
         "drupal/draggableviews": "^1.2",
         "drupal/editor_advanced_link": "^1.4",
         "drupal/embed": "^1.4",
-        "drupal/empty_page": "~2.0",
+        "drupal/empty_page": "^3.0",
         "drupal/entity": "^1.0",
         "drupal/entity_clone": "^1.0",
         "drupal/entity_embed": "^1.0",
