--- a/web/modules/contrib/better_exposed_filters/tests/modules/bef_test/bef_test.info.yml
+++ b/web/modules/contrib/better_exposed_filters/tests/modules/bef_test/bef_test.info.yml
@@ -1,7 +1,7 @@
 name: BEF Test
 type: module
 description: Test module for Better Exposed Filters
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 package: Views
 dependencies:
   - better_exposed_filters:better_exposed_filters
@@ -10,7 +10,7 @@ dependencies:
   - drupal:options
   - drupal:user
 
-# Information added by Drupal.org packaging script on 2019-11-04
-version: '8.x-4.0-alpha1'
+# Information added by Drupal.org packaging script on 2020-07-07
+version: '8.x-5.0-beta1'
 project: 'better_exposed_filters'
-datestamp: 1572828786
+datestamp: 1594141894
