--- a/web/modules/contrib/better_exposed_filters/tests/modules/bef_test/config/install/views.view.bef_test.yml
+++ b/web/modules/contrib/better_exposed_filters/tests/modules/bef_test/config/install/views.view.bef_test.yml
@@ -25,7 +25,6 @@ description: ''
 tag: ''
 base_table: node_field_data
 base_field: nid
-core: 8.x
 display:
   default:
     display_plugin: default
@@ -959,7 +958,7 @@ display:
           admin_label: ''
           exposed: true
           expose:
-            label: ''
+            label: 'Created'
           granularity: second
       title: 'BEF Test'
       header: {  }
