--- a/web/modules/contrib/webform_score/composer.json
+++ b/web/modules/contrib/webform_score/composer.json
@@ -28,6 +28,7 @@
     "source": "http://cgit.drupalcode.org/webform_score"
   },
   "require": {
-    "drupal/webform": "^5.0-beta || ^8.5.0-beta"
+    "drupal/webform": "^5.0",
+    "drupal/fraction": "^1.3"
   }
 }
