--- a/web/modules/contrib/webform_score/webform_score.services.yml
+++ b/web/modules/contrib/webform_score/webform_score.services.yml
@@ -1,13 +1,7 @@
 services:
-
-  # Services
-
-  webform_score.service:
-    class: Drupal\webform_score\Service\WebformScore
-    arguments: ['@plugin.manager.webform_score_validator', '@database']
-
-   # Plugins
-
-  plugin.manager.webform_score_validator:
-    class: Drupal\webform_score\Plugin\WebformScoreValidatorManager
-    parent: default_plugin_manager
+  webform_score.hooks:
+    class: Drupal\webform_score\HookService
+    arguments: ['@plugin.manager.webform.element']
+  plugin.manager.webform_score:
+    class: Drupal\webform_score\Plugin\WebformScoreManager
+    arguments: ['@container.namespaces', '@cache.discovery', '@module_handler', '@config.factory']
