--- a/web/modules/contrib/shs/modules/shs_chosen/shs_chosen.info.yml
+++ b/web/modules/contrib/shs/modules/shs_chosen/shs_chosen.info.yml
@@ -2,13 +2,12 @@ name: 'Simple hierarchical select: Chosen'
 type: module
 description: 'Integrates Chosen with Simple hierarchical select.'
 dependencies:
-  - chosen
-  - shs
-# core: 8.x
+  - chosen:chosen
+  - shs:shs
+core_version_requirement: ^8.8 || ^9
 package: User interface
 
-# Information added by Drupal.org packaging script on 2018-09-12
-version: '8.x-1.0-alpha4'
-core: '8.x'
+# Information added by Drupal.org packaging script on 2020-08-28
+version: '8.x-1.0-alpha5'
 project: 'shs'
-datestamp: 1536746309
+datestamp: 1598635903
