crowdsource mod update

--- a/web/modules/custom/crowdsourcing/crowdsourcing.libraries.yml
+++ b/web/modules/custom/crowdsourcing/crowdsourcing.libraries.yml
@@ -3,6 +3,8 @@ crowdsourcing:
     theme:
       css/like_dislike.css: {}
       css/styles.css: {}
+  js:
+    js/permissionalter.js: {}
 commands:
   version: VERSION
   js:
