--- a/web/modules/contrib/structure_sync/structure_sync.info.yml
+++ b/web/modules/contrib/structure_sync/structure_sync.info.yml
@@ -1,6 +1,6 @@
 name: 'Structure Sync'
 description: 'Tool for syncing structural data that is stored as content.'
-# core: 8.x
+core: 8.x
 configure: structure_sync.general.form
 dependencies:
   - drupal:taxonomy
@@ -8,9 +8,3 @@ dependencies:
   - drupal:block
 package: Structure
 type: module
-
-# Information added by Drupal.org packaging script on 2019-01-07
-version: '8.x-1.16'
-core: '8.x'
-project: 'structure_sync'
-datestamp: 1546851783
